# StackCalculator

./: .gitignore  CMakeLists.txt  Stack.h  inputs.txt  main.c  test.c
include/: LinkedList.h  Stack.h  dynamic_array.h  utils.h
src/: LinkedList.c  Stack.c  dynamic_array.c  main.c  test.c  utils.c
